--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="">
+      <a class="espacedroite" href="https://www.etsy.com/fr/shop/OsharenaShop?ref=search_shop_redirect">
         <i class="fas fa-shopping-cart"></i>SHOP
       </a>
       <a class="espacegauche" href="https://www.instagram.com/osharena_/">
