--- a/OtherP.html
+++ b/OtherP.html
@@ -124,6 +124,90 @@
   </section>
   <section id="Appreciate" class="appreciate">
     <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/OTHER/Demon Slayer/inosuke.jpeg" alt="Inosuke" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Inosuke Hashibira</p>
+                    <p>OFF WHITE</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/Muzan.jpeg" alt="Muzan" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kibutsuji Muzan </p>
+                    <p>Inspiration manga</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/Zenitsu.jpeg" alt="Zenitsu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zenitsu Agatasuma</p>
+                    <p>vs Araignée</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/inosukedym.jpeg" alt="Inosuke" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Inosuke Hashibira</p>
+                <p>Draw</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: DYMdraw</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/OTHER/Demon Slayer/sabito&makomo.JPG" alt="sabito" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Sabito & Makomo</p>
+                    <p>Dans des glycines</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Heaten</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/shinobu.JPG" alt="Shinobu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Shinobu Kocho</p>
+                    <p>Butterfly</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/zenitsuheaten2.JPG" alt="Zenitsu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zenitsu Agatasuma</p>
+                    <p>1st fight</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Heaten</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/tanjiroflame.jpeg" alt="Tanjiro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Tanjiro Kamado</p>
+                <p>Flames</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: ?</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
       <h2 class="title-underline" >DEATHNOTE</h2>
         <ul class="appreciate-list">
             <li class="appreciate-elem">
