--- a/OtherP.html
+++ b/OtherP.html
@@ -131,7 +131,7 @@
                     <p>Inosuke Hashibira</p>
                     <p>OFF WHITE</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: DYMdraw</p>
                 </div>
             </li>
             <li class="appreciate-elem">
@@ -200,7 +200,7 @@
                 <p>Tanjiro Kamado</p>
                 <p>Flames</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: ?</p>
+                <p>Auteur: Phaawl</p>
             </div>
         </li>
         </ul>
