--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -32,7 +32,7 @@
     <a class="active" href="OnepieceP.html">ONE PIECE</a>
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
-    <a href="TokyoghoulP.html">TOKYOGHOUL</a>
+    <a href="DemonSlayerP.html">DEMON SLAYER</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
     <a href="OtherP.html">OTHER</a>
@@ -88,7 +88,7 @@
                     <p>Portgas D. Ace</p>
                     <p>A la recherche de Teach</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: Dlele</p>
+                    <p>Auteur: Dlelie</p>
                 </div>
             </li>
             <li class="appreciate-elem">
@@ -316,7 +316,7 @@
                   <p>Vogue Merry</p>
                   <p>flow</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Dlele </p>
+                  <p>Auteur: Dlelie </p>
               </div>
           </li>
             <li class="appreciate-elem">
@@ -433,7 +433,7 @@
                     <p>Roronoa Zoro</p>
                     <p>& Enma</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: DLELE</p>
+                    <p>Auteur: DLELiE</p>
                 </div>
             </li>
             <li class="appreciate-elem">
