--- a/OtherP.html
+++ b/OtherP.html
@@ -32,180 +32,11 @@
     <a href="OnepieceP.html">ONE PIECE</a>
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
-    <a href="TokyoghoulP.html">TOKYOGHOUL</a>
+    <a href="DemonSlayerP.html">DEMON SLAYER</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
     <a class="active" href="OtherP.html">OTHER</a>
   </nav>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-      <h2 class="title-underline" >DEMON SLAYER</h2>
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/Nezukoadidas.jpeg" alt="Nezuko" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Nezuko Kamado</p>
-                    <p>Adidas</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: DYM</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/Tanjironike.jpeg" alt="Tanjiro" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Tanjiro Kamado</p>
-                    <p>Nike</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: DYM</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/zenitsutrasher.jpeg" alt="Zenitsu" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Zenitsu Agatasuma</p>
-                    <p>Trasher</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: DYM</p>
-                </div>
-            </li>
-          <li class="appreciate-elem">
-            <img src="./img/OTHER/Demon Slayer/Tanjirocoverhamza.JPG" alt="Tanjiro" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Tanjiro Kamado</p>
-                <p>Cover Hamza - 1994</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: coverxanimes</p>
-            </div>
-        </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/nezukotanjiroovrax.jpeg" alt="Nezuko" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Nezuko & Tanjiro Kamado</p>
-                    <p>Love</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Ovrax</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/tomiokagiyu.jpeg" alt="Tomioka" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Tomioka Giyu</p>
-                    <p>dans une forêt</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: OXY</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/zenitsu2.jpg" alt="Zenitsu" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Zenitsu Agatasuma</p>
-                    <p>Hot theme</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Hermès</p>
-                </div>
-            </li>
-          <li class="appreciate-elem">
-            <img src="./img/OTHER/Demon Slayer/Inosukefleuve.JPG" alt="Inosuke" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Inosuke Hashibira</p>
-                <p>Fleuve</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: @Opahk7</p>
-            </div>
-        </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="tapion" src="./img/OTHER/Demon Slayer/inosuke.jpeg" alt="Inosuke" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Inosuke Hashibira</p>
-                    <p>OFF WHITE</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: DYMdraw</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/Muzan.jpeg" alt="Muzan" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Kibutsuji Muzan </p>
-                    <p>Inspiration manga</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/Zenitsu.jpeg" alt="Zenitsu" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Zenitsu Agatasuma</p>
-                    <p>vs Araignée</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
-                </div>
-            </li>
-          <li class="appreciate-elem">
-            <img src="./img/OTHER/Demon Slayer/inosukedym.jpeg" alt="Inosuke" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Inosuke Hashibira</p>
-                <p>Draw</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: DYMdraw</p>
-            </div>
-        </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="tapion" src="./img/OTHER/Demon Slayer/sabito&makomo.JPG" alt="sabito" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Sabito & Makomo</p>
-                    <p>Dans des glycines</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Heaten</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/shinobu.JPG" alt="Shinobu" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Shinobu Kocho</p>
-                    <p>Butterfly</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Tark</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/zenitsuheaten2.JPG" alt="Zenitsu" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Zenitsu Agatasuma</p>
-                    <p>1st fight</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: Heaten</p>
-                </div>
-            </li>
-          <li class="appreciate-elem">
-            <img src="./img/OTHER/Demon Slayer/tanjiroflame.jpeg" alt="Tanjiro" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Tanjiro Kamado</p>
-                <p>Flames</p>
-                <div class="appreciate-separator"></div>
-                <p>Auteur: Phaawl</p>
-            </div>
-        </li>
-        </ul>
-    </div>
-  </section>
   <section id="Appreciate" class="appreciate">
     <div class="container">
       <h2 class="title-underline" >DEATHNOTE</h2>
@@ -244,6 +75,133 @@
                     <p>Dieu de la mort</p>
                     <div class="appreciate-separator"></div>
                     <p>Auteur: Heaten</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+      <h2 class="title-underline" >TOKYO GHOUL</h2>
+        <ul class="appreciate-list">
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Tokyoghoul/Kaneki.png" alt="Kaneki" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ken Kaneki</p>
+                <p>Inspiration manga</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: ?</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+            <img src="./img/OTHER/Tokyoghoul/KanekiGhoul.png" alt="Kaneki" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ken Kaneki</p>
+                <p>Ghoul mode activated</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @KillianTailliez</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+            <img src="./img/OTHER/Tokyoghoul/Touka kirishima.png" alt="Toka" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Toka Kirishima</p>
+                <p>Fan Art</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Kamex</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+            <img src="./img/OTHER/Tokyoghoul/kenkaneki3.jpeg" alt="Kaneki" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ken Kaneki</p>
+                <p>beginning</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @i.scxr</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/kenkaneki5.JPG" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>Bug</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: AceLem</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/kaneki6.jpeg" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>pur</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/kaneki7.JPG" alt="kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>City trip</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: i.scxr</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/kanekicheveuxnoirs.JPG" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>Cheveux noirs</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/Kenkaneki1.JPG" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>Sombre</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Oxy</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/KenKaneki2.JPG" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>Chute libre</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Narutovie</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/OTHER/Tokyoghoul/kaneki9.JPG" alt="Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken Kaneki</p>
+                    <p>Assis</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Tokyoghoul/Toka&Ken.JPG" alt="Toka&Kaneki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ken & Toka</p>
+                    <p>LOOOOVE</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
                 </div>
             </li>
         </ul>
