--- a/SNKP.html
+++ b/SNKP.html
@@ -32,10 +32,10 @@
     <a href="OnepieceP.html">ONE PIECE</a>
     <a class="active" href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
-    <a href="TokyoghoulP.html">TOKYOGHOUL</a>
-    <a href="Deathnotep.html">DEATHNOTE</a>
+    <a href="DemonSlayerP.html">DEMON SLAYER</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
+    <a href="OtherP.html">OTHER</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
