--- a/DBP.html
+++ b/DBP.html
@@ -32,7 +32,7 @@
     <a href="OnepieceP.html">ONE PIECE</a>
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
-    <a href="TokyoghoulP.html">TOKYOGHOUL</a>
+    <a href="DemonSlayerP.html">DEMON SLAYER</a>
     <a class="active" href="DBP.html">DRAGONBALL</a>
     <a href="MHAP.html">MHA</a>
     <a href="OtherP.html">OTHER</a>
