--- a/phone.html
+++ b/phone.html
@@ -32,7 +32,7 @@
     <a href="OnepieceP.html">OP</a>
     <a href="SNKP.html">SNK</a>
     <a href="HxHP.html">HxH</a>
-    <a href="TokyoghoulP.html">TOKYOGHOUL</a>
+    <a href="DemonSlayerP.html">DEMON SLAYER</a>
     <a href="DBP.html">DB</a>
     <a href="MHAP.html">MHA</a>
     <a href="OtherP.html">OTHER</a>
