--- a/Banner.html
+++ b/Banner.html
@@ -32,8 +32,8 @@
       <div class="banner-container-list">
         <div class="banner-container-elem">
           <h5>
-            Ajouts récents
-          </h2>
+            À la une
+          </h5>
         <ul>
           <li>
             <div class="espacetitre">
