--- a/computer.html
+++ b/computer.html
@@ -32,8 +32,8 @@
       <div class="banner-container-list">
         <div class="banner-container-elem">
           <h5>
-            Ajouts récents
-          </h2>
+            À la une
+          </h5>
         <ul>
           <li>
             <div class="espacetitre">
@@ -121,7 +121,7 @@
         <ul>
           <li>
             <h3>ONE PIECE</h3>
-            <p>+4 fonds d'écrans</p>
+            <p>+2 fonds d'écrans</p>
             <a href="computerOP.html">VOIR</a>
           </li>
         <li>
@@ -131,12 +131,12 @@
         </li>
         <li>
           <h3>MHA</h3>
-          <p>+2 fonds d'écrans</p>
+          
           <a href="computerMHA.html">VOIR</a>
         </li>
         <li>
           <h3>DRAGONBALL</h3>
-          <p>+2 fonds d'écrans</p>
+          
           <a href="computerDB.html">VOIR</a>
         </li>
         <li>
