--- a/computerDB.html
+++ b/computerDB.html
@@ -56,6 +56,28 @@
         </ul>
     </div>
   </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/goten&trunksPC.JPG" alt="Gotentrunks" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Goten & Trunks</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Friends</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/ShenronGokuPC 14.40.16.JPG" alt="Shenron" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Shenron & Goku</p>
+                  <div class="appreciate-separator"></div>
+                  <p>cieux</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
   <footer>
     <div class="block">
         <h2>SOCIAL</h2>
