--- a/PDB.html
+++ b/PDB.html
@@ -28,14 +28,14 @@
     </ul>
   </header>
   <nav>
-    <a href="NarutoP.html">NARUTO</a>
-    <a href="OnepieceP.html">ONE PIECE</a>
-    <a href="SNKP.html">SNK</a>
-    <a href="HxHP.html">HxH</a>
-    <a href="DemonSlayerP.html">DEMON SLAYER</a>
-    <a class="active" href="DBP.html">DRAGONBALL</a>
-    <a href="MHAP.html">MHA</a>
-    <a href="OtherP.html">OTHER</a>
+    <a hhref="PNaruto.html">NARUTO</a>
+    <a href="POnePiece.html">OP</a>
+    <a href="PSNK.html">SNK</a>
+    <a href="PHxH.html">HxH</a>
+    <a href="PDemonSlayer.html">DEMON SLAYER</a>
+    <a class="active" href="PDB.html">DB</a>
+    <a href="PMHA.html">MHA</a>
+    <a href="POther.html">OTHER</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
