--- a/Banner.html
+++ b/Banner.html
@@ -38,6 +38,18 @@
           <li>
             <div class="espacetitre">
               <h2>
+                Lelie
+              </h2>
+              <a href="https://twitter.com/D_Leliee"><i class="fas fa-arrow-left fa-1x"></i> Discover</a>
+            </div>
+            <img src="./img/Bannière/CeneBannerMugiwara.jpeg" alt="Mugiwara">
+            <h2>
+              Mugiwara
+            </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
+              <h2>
                 KENYA
               </h2>
               <a href="https://twitter.com/__ohf__"><i class="fas fa-arrow-left fa-1x"></i> Discover</a>
