--- a/BannerDB.html
+++ b/BannerDB.html
@@ -84,6 +84,28 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/GokuSSJeclairs.JPG" alt="Cell&Goku" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Son Goku</p>
+                <div class="appreciate-separator"></div>
+                <p>Aura - éclairs</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img class="banniere" src="./img/Bannière/gohanevolutionbanner.JPG" alt="Gohan" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Son Gohan</p>
+              <div class="appreciate-separator"></div>
+              <p>Ssj1 - Ssj2 - Ultime</p>
+          </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
             <img class="banniere" src="./img/Bannière/Gohanbanniere.png" alt="Gohan" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
                 <p>Son Gohan</p>
