--- a/BannerOP.html
+++ b/BannerOP.html
@@ -40,6 +40,29 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/CeneBannerMugiwara.jpeg" alt="Mugiwara" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>"La Cene" version Mugiwara</p>
+                    <p>Auteur: @D_Leliee</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Inspiration "La Cene" de De Vinci</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Mugiwaradrinkbanner.jpeg" alt="Mugiwara" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Mugiwara</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Drinking</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="banniere" src="./img/Bannière/Mugiwarabannierecroix.png" alt="Mugiwara" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Mugiwara - symbole pour Vivi</p>
