--- a/PDemonSlayer.html
+++ b/PDemonSlayer.html
@@ -209,6 +209,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/giyu2.jpeg" alt="Giyu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Tomioka Giyu</p>
+                    <p>Streetstyle</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/Shinazugawa.jpeg" alt="Shinazugawa" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Shinazugawa</p>
+                    <p>..réflexion..</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Oxy</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/OTHER/Demon Slayer/UzuiTengen.png" alt="Uzui" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Tengen Uzui</p>
+                    <p>flow</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/Inosuke2signe.jpeg" alt="Inosuke" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Inosuke Hashibira</p>
+                <p>"Cheese!"</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Oirax</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="tapion" src="./img/OTHER/Demon Slayer/sabito&makomo.JPG" alt="sabito" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Sabito & Makomo</p>
