--- a/computerOP.html
+++ b/computerOP.html
@@ -34,6 +34,28 @@
     <a href="computerDB.html">DB</a>
     <a href="computerMHA.html">MHA</a>
   </nav>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/MugiwarawanoPC.jpeg" alt="WANO" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mugiwara</p>
+                    <div class="appreciate-separator"></div>
+                    <p>"OVER THE TOP"</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/Zoroluffyroidespirates.JPG" alt="MUgiwara" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Roronoa Zoro</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Sacrifice</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
 <section id="Appreciate" class="appreciate">
   <div class="container">
       <ul class="appreciate-list">
