--- a/PDB.html
+++ b/PDB.html
@@ -33,7 +33,7 @@
     <a href="PSNK.html">SNK</a>
     <a href="PHxH.html">HxH</a>
     <a href="PDemonSlayer.html">DEMON SLAYER</a>
-    <a class="active" href="PDB.html">DB</a>
+    <a class="active" href="PDB.html">DRAGONBALL</a>
     <a href="PMHA.html">MHA</a>
     <a href="POther.html">OTHER</a>
   </nav>
