--- a/computer.html
+++ b/computer.html
@@ -38,6 +38,17 @@
           <li>
             <div class="espacetitre">
               <h2>
+                Mugiwaras
+              </h2>
+            </div>
+            <img src="./img/PC/MugiwarawanoPC.jpeg" alt="Mugiwara">
+            <h2>
+              Arc Wano Kuni
+            </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
+              <h2>
                 Disponible uniquement ici à l'affiche pour le moment !
               </h2>
             </div>
