--- a/computerSNK.html
+++ b/computerSNK.html
@@ -34,6 +34,28 @@
     <a href="computerDB.html">DB</a>
     <a href="computerMHA.html">MHA</a>
   </nav>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="fdepc" src="./img/PC/LivaivsKennyPC.jpg" alt="LeviKenny" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Livaï vs Kenny</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Duel</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/mikasavscuirassePC.jpeg" alt="mikasa" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Mikasa vs Cuirassé</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Bataille de Shiganshina</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
 <section id="Appreciate" class="appreciate">
   <div class="container">
       <ul class="appreciate-list">
