--- a/PNaruto.html
+++ b/PNaruto.html
@@ -83,6 +83,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/Naruto/Jirayaheaten.JPG" alt="Jiraya" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Jiraya</p>
+                    <p>Clouds</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Heaten</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/Naruto/Kisame3.jpeg" alt="Kisame" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kisame Hoshigaki</p>
+                    <p>"Suiton"</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Heaten</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/SasukeMandaII.JPG" alt="SasukeMandaII" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Sasuke Uchiwa</p>
+                    <p>& Manda II</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: MizuXArt</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/Naruto/Yamato.jpeg" alt="Yamato" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Yamato</p>
+                  <p>"MOKUTON"</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Heaten</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/Naruto/Kakashifondrin&obito.png" alt="Kakashimemories" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Kakashi Hatake</p>
